--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "4.0.14",
+	"version": "4.0.15-alpha.0",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
