NDS-426 package file structure setup and rendering - wip

--- a/components/nds-accordion/package.json
+++ b/components/nds-accordion/package.json
@@ -8,6 +8,9 @@
 	"main": "es/Accordion.js",
 	"types": "es/Accordion.d.ts",
 	"style": "scss/accordion.scss",
+  "directories": {
+		"lib": "es"
+	},
 	"files": [
 		"es",
 		"scss",
