--- a/components/nds-accordion/package.json
+++ b/components/nds-accordion/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-accordion",
-	"version": "0.1.0",
+	"version": "0.2.0-alpha.0",
 	"description": "Accordion component for the NICE Design System",
 	"author": "John Davey <john.davey@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -8,7 +8,7 @@
 	"main": "es/Accordion.js",
 	"types": "es/Accordion.d.ts",
 	"style": "scss/accordion.scss",
-  "directories": {
+	"directories": {
 		"lib": "es"
 	},
 	"files": [
@@ -31,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.12"
+		"@nice-digital/nds-core": "^4.1.0-alpha.0"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
