--- a/components/nds-radio/package.json
+++ b/components/nds-radio/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-radio",
-	"version": "4.0.12",
+	"version": "4.1.0-alpha.0",
 	"description": "Radio button component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
@@ -36,7 +36,7 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.12",
+		"@nice-digital/nds-core": "^4.1.0-alpha.0",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
