--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@nice-digital/icons": "^6.0.1",
 		"@nice-digital/nds-a-z-list": "^4.1.0-alpha.0",
+    "@nice-digital/nds-accordion": "^0.2.0-alpha.0",
 		"@nice-digital/nds-action-banner": "^4.1.0-alpha.0",
 		"@nice-digital/nds-alert": "^4.1.0-alpha.0",
 		"@nice-digital/nds-alphabet": "^3.1.0-alpha.0",
