--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "4.0.16-alpha.0",
+	"version": "4.0.16",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
@@ -31,8 +31,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^6.1.4-alpha.0",
-		"@nice-digital/nds-core": "^4.0.13-alpha.0",
+		"@nice-digital/icons": "^6.1.4",
+		"@nice-digital/nds-core": "^4.0.13",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
