--- a/components/nds-panel/package.json
+++ b/components/nds-panel/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-panel",
-	"version": "4.0.13-alpha.0",
+	"version": "4.0.13",
 	"description": "Panel component for the NICE Design System",
 	"keywords": [
 		"panel"
@@ -38,7 +38,7 @@
 		"react-dom": "^16 || ^17 || ^18"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.13-alpha.0",
+		"@nice-digital/nds-core": "^4.0.13",
 		"classnames": "^2.2.6"
 	},
 	"devDependencies": {
