NDS-426: Update README
- Add doctoc for generating README navigation
- Update the README with more detail around the accordion components and their props

--- a/components/nds-accordion/package.json
+++ b/components/nds-accordion/package.json
@@ -25,7 +25,8 @@
 		"url": "git+https://github.com/nice-digital/nice-design-system.git"
 	},
 	"scripts": {
-		"test": "echo \"Error: run tests from root\" && exit 1"
+		"test": "echo \"Error: run tests from root\" && exit 1",
+    "readme": "doctoc ./README.md"
 	},
 	"bugs": {
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
