--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-filters",
-	"version": "5.0.18",
+	"version": "5.0.19-alpha.0",
 	"description": "Filter components for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -28,11 +28,11 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^6.1.4",
-		"@nice-digital/nds-button": "^4.0.15",
-		"@nice-digital/nds-core": "^4.0.13",
-		"@nice-digital/nds-input": "^4.0.13",
-		"@nice-digital/nds-tag": "^4.0.13",
+		"@nice-digital/icons": "^6.1.5-alpha.0",
+		"@nice-digital/nds-button": "^4.0.16-alpha.0",
+		"@nice-digital/nds-core": "^4.0.14-alpha.0",
+		"@nice-digital/nds-input": "^4.0.14-alpha.0",
+		"@nice-digital/nds-tag": "^4.0.14-alpha.0",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
