--- a/components/nds-accordion/package.json
+++ b/components/nds-accordion/package.json
@@ -32,7 +32,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.1.2-alpha.0"
+		"@nice-digital/nds-core": "^4.1.2-alpha.0",
+		"classnames": "^2.5.1"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
