--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/design-system",
-	"version": "5.0.28",
+	"version": "5.0.31-alpha.0",
 	"description": "Your source for quickly creating consistent on-brand NICE digital services",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -32,39 +32,40 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^6.1.4",
-		"@nice-digital/nds-a-z-list": "^4.0.14",
-		"@nice-digital/nds-action-banner": "^4.0.16",
-		"@nice-digital/nds-alert": "^4.0.13",
-		"@nice-digital/nds-alphabet": "^3.0.13",
-		"@nice-digital/nds-breadcrumbs": "^4.0.13",
-		"@nice-digital/nds-button": "^4.0.15",
-		"@nice-digital/nds-card": "^4.0.14",
-		"@nice-digital/nds-checkbox": "^4.0.13",
-		"@nice-digital/nds-column-list": "^4.0.13",
-		"@nice-digital/nds-container": "^4.0.13",
-		"@nice-digital/nds-core": "^4.0.13",
-		"@nice-digital/nds-enhanced-pagination": "^4.0.13",
-		"@nice-digital/nds-filters": "^5.0.18",
-		"@nice-digital/nds-form-group": "^4.0.13",
-		"@nice-digital/nds-full-bleed": "^4.0.13",
-		"@nice-digital/nds-grid": "^4.0.16",
-		"@nice-digital/nds-hero": "^4.0.13",
-		"@nice-digital/nds-horizontal-nav": "^4.0.13",
-		"@nice-digital/nds-in-page-nav": "^4.0.14",
-		"@nice-digital/nds-input": "^4.0.13",
-		"@nice-digital/nds-maintain-ratio": "^4.0.13",
-		"@nice-digital/nds-page-header": "^4.0.16",
-		"@nice-digital/nds-panel": "^4.0.13",
-		"@nice-digital/nds-phase-banner": "^4.0.13",
-		"@nice-digital/nds-prev-next": "^4.0.13",
-		"@nice-digital/nds-radio": "^4.0.13",
-		"@nice-digital/nds-simple-pagination": "^4.0.13",
-		"@nice-digital/nds-stacked-nav": "^4.0.13",
-		"@nice-digital/nds-table": "^4.0.13",
-		"@nice-digital/nds-tabs": "^4.0.13",
-		"@nice-digital/nds-tag": "^4.0.13",
-		"@nice-digital/nds-textarea": "^4.0.13",
+		"@nice-digital/icons": "^6.1.5-alpha.0",
+		"@nice-digital/nds-a-z-list": "^4.0.15-alpha.0",
+		"@nice-digital/nds-accordion": "^0.2.10-alpha.0",
+		"@nice-digital/nds-action-banner": "^4.0.17-alpha.0",
+		"@nice-digital/nds-alert": "^4.0.14-alpha.0",
+		"@nice-digital/nds-alphabet": "^3.0.14-alpha.0",
+		"@nice-digital/nds-breadcrumbs": "^4.0.14-alpha.0",
+		"@nice-digital/nds-button": "^4.0.16-alpha.0",
+		"@nice-digital/nds-card": "^4.0.15-alpha.0",
+		"@nice-digital/nds-checkbox": "^4.0.14-alpha.0",
+		"@nice-digital/nds-column-list": "^4.0.14-alpha.0",
+		"@nice-digital/nds-container": "^4.0.14-alpha.0",
+		"@nice-digital/nds-core": "^4.0.14-alpha.0",
+		"@nice-digital/nds-enhanced-pagination": "^4.0.14-alpha.0",
+		"@nice-digital/nds-filters": "^5.0.19-alpha.0",
+		"@nice-digital/nds-form-group": "^4.0.14-alpha.0",
+		"@nice-digital/nds-full-bleed": "^4.0.14-alpha.0",
+		"@nice-digital/nds-grid": "^4.0.17-alpha.0",
+		"@nice-digital/nds-hero": "^4.0.14-alpha.0",
+		"@nice-digital/nds-horizontal-nav": "^4.0.14-alpha.0",
+		"@nice-digital/nds-in-page-nav": "^4.0.15-alpha.0",
+		"@nice-digital/nds-input": "^4.0.14-alpha.0",
+		"@nice-digital/nds-maintain-ratio": "^4.0.14-alpha.0",
+		"@nice-digital/nds-page-header": "^4.0.17-alpha.0",
+		"@nice-digital/nds-panel": "^4.0.14-alpha.0",
+		"@nice-digital/nds-phase-banner": "^4.0.14-alpha.0",
+		"@nice-digital/nds-prev-next": "^4.0.14-alpha.0",
+		"@nice-digital/nds-radio": "^4.0.14-alpha.0",
+		"@nice-digital/nds-simple-pagination": "^4.0.14-alpha.0",
+		"@nice-digital/nds-stacked-nav": "^4.0.14-alpha.0",
+		"@nice-digital/nds-table": "^4.0.14-alpha.0",
+		"@nice-digital/nds-tabs": "^4.0.14-alpha.0",
+		"@nice-digital/nds-tag": "^4.0.14-alpha.0",
+		"@nice-digital/nds-textarea": "^4.0.14-alpha.0",
 		"normalize.css": "8.0.1"
 	},
 	"peerDependencies": {
