--- a/components/nds-alert/package.json
+++ b/components/nds-alert/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-alert",
-	"version": "4.0.14-alpha.0",
+	"version": "4.0.14",
 	"description": "Alert component for the NICE Design System",
 	"keywords": [
 		"alert"
@@ -31,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.14-alpha.0",
+		"@nice-digital/nds-core": "^4.0.14",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
