--- a/components/nds-card/package.json
+++ b/components/nds-card/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-card",
-	"version": "4.0.15-alpha.0",
+	"version": "4.0.15",
 	"description": "Card component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -31,7 +31,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.14-alpha.0",
+		"@nice-digital/nds-core": "^4.0.14",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
