--- a/components/nds-maintain-ratio/package.json
+++ b/components/nds-maintain-ratio/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-maintain-ratio",
-	"version": "4.0.14-alpha.0",
+	"version": "4.0.14",
 	"description": "Maintain ratio component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -32,7 +32,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.14-alpha.0",
+		"@nice-digital/nds-core": "^4.0.14",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
