--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "4.3.1-alpha.1",
+	"version": "4.3.1-alpha.9+c4fbbadc",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
@@ -47,5 +47,5 @@
 		"@types/node": "^18.11.9",
 		"typescript": "^4.8.4"
 	},
-	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
+	"gitHead": "c4fbbadc10da9f7c918c041fbba076fb717d8fe3"
 }
