--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/design-system",
-	"version": "5.5.0",
+	"version": "5.5.1-alpha.0",
 	"description": "Your source for quickly creating consistent on-brand NICE digital services",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -61,7 +61,7 @@
 		"@nice-digital/nds-prev-next": "^4.0.14",
 		"@nice-digital/nds-radio": "^4.0.14",
 		"@nice-digital/nds-simple-pagination": "^4.0.14",
-		"@nice-digital/nds-stacked-nav": "^4.0.14",
+		"@nice-digital/nds-stacked-nav": "^4.0.15-alpha.0",
 		"@nice-digital/nds-table": "^4.0.14",
 		"@nice-digital/nds-tabs": "^4.0.14",
 		"@nice-digital/nds-tag": "^4.0.14",
