--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "4.3.1-alpha.12+dd76d13a",
+	"version": "4.3.1",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
