--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/design-system",
-	"version": "5.5.4",
+	"version": "5.5.5-alpha.0",
 	"description": "Your source for quickly creating consistent on-brand NICE digital services",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -40,7 +40,7 @@
 		"@nice-digital/nds-alphabet": "^3.0.14",
 		"@nice-digital/nds-breadcrumbs": "^4.0.14",
 		"@nice-digital/nds-button": "^4.0.16",
-		"@nice-digital/nds-card": "^4.0.16",
+		"@nice-digital/nds-card": "^4.0.17-alpha.0",
 		"@nice-digital/nds-checkbox": "^4.0.14",
 		"@nice-digital/nds-column-list": "^4.0.14",
 		"@nice-digital/nds-container": "^4.0.14",
