--- a/components/nds-card/package.json
+++ b/components/nds-card/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-card",
-	"version": "4.0.17-alpha.0",
+	"version": "4.0.17-alpha.4+9d261aaf",
 	"description": "Card component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -46,5 +46,5 @@
 		"@types/node": "^18.11.9",
 		"typescript": "^4.8.4"
 	},
-	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
+	"gitHead": "9d261aafd46c8f99e1203267c9cda27a7560e0cd"
 }
