--- a/components/nds-accordion/package.json
+++ b/components/nds-accordion/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-accordion",
-	"version": "0.3.0",
+	"version": "0.3.1-alpha.18+1ee77a5f",
 	"description": "Accordion component for the NICE Design System",
 	"author": "John Davey <john.davey@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -48,5 +48,5 @@
 		"jest-extended": "^4.0.2",
 		"typescript": "^4.8.4"
 	},
-	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
+	"gitHead": "1ee77a5f08ae953ce4890df4db9042c88546e7db"
 }
