--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nice-design-system",
   "private": true,
-  "version": "5.0.0",
+  "version": "5.0.1-alpha.0",
   "description": "Monorepo for the NICE Design System",
   "scripts": {
     "start": "npm run dev",
