NDS-473 spacing changes to accordion in Storyblok (#362)
* NDS-473: Add a <div> with a data-id attribute to identify the accordion group.

* NDS-473 Update package as npm run release :alpha failed

* NDS-473: Pushing changes in npm run release:alpha due to an error with the alpha release

* NDS -473 Updated packages

* NDS-473 revert changes in alpha release command

* NDS-473: Replace the data-id attribute with a class name.

* NDS-473 Updated alpha release command

* NDS-473 Updated packeages

* NDS-473 Update alpha tags

* 5.0.1-alpha.0

* NDS-473 Add blank line to bump alpha

* NDS-473 Update className to BEM format

* NDS-473 CHange to data-id to find issues with alpha release

* NDS-473 Add classname in BEM format

* NDS-473 Reinstate data-id

* NDS-473 Remove data-id attribute

* NDS-473 Revert some package locks to main versions

* NDS Add git fetch tags as part of npm release alpha script

---------

Co-authored-by: John Davey <john.davey@nice.org.uk>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nice-design-system",
   "private": true,
-  "version": "5.0.0",
+  "version": "5.0.1-alpha.0",
   "description": "Monorepo for the NICE Design System",
   "scripts": {
     "start": "npm run dev",
@@ -19,7 +19,7 @@
     "// LERNA": "",
     "lerna": "lerna",
     "lerna:clean": "lerna clean -y",
-    "release:alpha": "npm run clean:ts && npm run build:ts && lerna publish --canary --preid alpha --dist-tag alpha --git-tag-version",
+    "release:alpha": "git fetch --tags && npm run clean:ts && npm run build:ts && lerna publish --canary --preid alpha --dist-tag alpha --git-tag-version",
     "release:latest": "npm run clean:ts && npm run build:ts && lerna publish --dist-tag latest",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint",
