--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/design-system",
-	"version": "5.5.5-alpha.0",
+	"version": "5.5.5",
 	"description": "Your source for quickly creating consistent on-brand NICE digital services",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -34,13 +34,13 @@
 	"dependencies": {
 		"@nice-digital/icons": "^6.1.5",
 		"@nice-digital/nds-a-z-list": "^4.0.15",
-		"@nice-digital/nds-accordion": "^0.3.0",
+		"@nice-digital/nds-accordion": "^0.3.1",
 		"@nice-digital/nds-action-banner": "^4.3.3",
 		"@nice-digital/nds-alert": "^4.0.14",
 		"@nice-digital/nds-alphabet": "^3.0.14",
 		"@nice-digital/nds-breadcrumbs": "^4.0.14",
 		"@nice-digital/nds-button": "^4.0.16",
-		"@nice-digital/nds-card": "^4.0.17-alpha.0",
+		"@nice-digital/nds-card": "^4.0.17",
 		"@nice-digital/nds-checkbox": "^4.0.14",
 		"@nice-digital/nds-column-list": "^4.0.14",
 		"@nice-digital/nds-container": "^4.0.14",
