--- a/docs/package.json
+++ b/docs/package.json
@@ -18,8 +18,8 @@
 		"glob": "^8.0.3",
 		"next": "^13.2.4",
 		"next-transpile-modules": "^9.1.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"remark-gfm": "^3.0.1"
 	},
 	"devDependencies": {
