--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@types/node": "^18.11.9",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "concurrently": "^7.5.0",
