--- a/docs/package.json
+++ b/docs/package.json
@@ -27,6 +27,8 @@
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
 		"@types/node": "^18.11.9",
+		"@types/react": "^18.3.24",
+		"@types/react-dom": "^18.3.1",
 		"eslint": "8.26.0",
 		"eslint-config-next": "13.0.0",
 		"sass": "^1.55.0",
