NDS-477 update react on design system to latest minor of v18 (#366)
* NDS-477 update design-system-docs to react and react-dom v18.3.1

* NDS-477 bump @types/react and @types/react-dom

* NDS-477 move @types/react @types/react-dom to /docs from root

--- a/docs/package.json
+++ b/docs/package.json
@@ -18,8 +18,8 @@
 		"glob": "^8.0.3",
 		"next": "^13.2.4",
 		"next-transpile-modules": "^9.1.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"remark-gfm": "^3.0.1"
 	},
 	"devDependencies": {
@@ -27,8 +27,8 @@
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
 		"@types/node": "^18.11.9",
-		"@types/react": "18.0.24",
-		"@types/react-dom": "18.0.8",
+		"@types/react": "^18.3.24",
+		"@types/react-dom": "^18.3.1",
 		"eslint": "8.26.0",
 		"eslint-config-next": "13.0.0",
 		"sass": "^1.55.0",
