--- a/docs/package.json
+++ b/docs/package.json
@@ -29,8 +29,8 @@
 		"@types/node": "^18.19.0",
 		"@types/react": "^18.3.24",
 		"@types/react-dom": "^18.3.1",
-		"eslint": "8.26.0",
-		"eslint-config-next": "13.0.0",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "^14.2.33",
 		"sass": "^1.55.0",
 		"typescript": "4.8.4"
 	}
