--- a/docs/package.json
+++ b/docs/package.json
@@ -32,6 +32,6 @@
 		"eslint": "^8.57.0",
 		"eslint-config-next": "^14.2.33",
 		"sass": "^1.55.0",
-		"typescript": "4.8.4"
+		"typescript": "^5.9.2"
 	}
 }
