NDS-475 Update Design System docs to NextJS 15

--- a/docs/package.json
+++ b/docs/package.json
@@ -12,11 +12,11 @@
 		"@code-hike/mdx": "^0.8.3",
 		"@mdx-js/loader": "^2.1.5",
 		"@mdx-js/react": "^2.1.5",
-		"@next/mdx": "^14.2.33",
+		"@next/mdx": "^15.5.4",
 		"@nice-digital/design-system": "^5.5.7",
 		"@nice-digital/global-nav": "^5.0.916",
 		"glob": "^8.0.3",
-		"next": "^14.2.33",
+		"next": "^15.5.4",
 		"next-transpile-modules": "^9.1.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -29,8 +29,9 @@
 		"@types/node": "^18.19.0",
 		"@types/react": "^18.3.24",
 		"@types/react-dom": "^18.3.1",
+		"@types/styled-jsx": "^3.4.4",
 		"eslint": "^8.57.0",
-		"eslint-config-next": "^14.2.33",
+		"eslint-config-next": "^15.5.4",
 		"sass": "^1.55.0",
 		"typescript": "^5.9.2"
 	}
