--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -14,6 +14,7 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
+		"types": ["react", "node", "styled-jsx"],
 		"incremental": true
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
