--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system-docs",
-  "version": "1.6.8-alpha.0",
+  "version": "1.6.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
