NDS-475 Update design system to Next JS 15 (#375)
* NDS-475 Updated Next js from 13.2.4 to 14.2.33

* NDS-475 Update @types/node to 18.19.0",

* NDS-470 Update eslint to 8.57.0 and eslint-config-next to 14.2.33

* NDS-475 Update typescript to 5.9.2

* NDS-475 Update package-lock.json

* NDS-475 Remove next export from package.json

* NDS-475 Add output:export and remove redirects from next.config.mjs

* NDS-475 Create dedicated redirect pages for foundations and components and Remove redirects from config

* NDS-475 Added .next to eslintignore file

* NDS-475 Update Design System docs to NextJS 15

* NDS-475 Remove "swcMinify: true" from config

* NDS-475  Use window.location.replace() and meta refresh tags for client side redirection

* NDS-475 Update tsconfig with types

* NXT-475 Update package-lock.json

* NDS-475 Add "react-dom" to types in tsconfig

* NDS-475 Remove @mdx-js/loader as we are on @next/mdx@15.x

* NDS-475 Fix Lint issues

* NDS-475 Replace window.location with next/router replace

* NDS-475 Add "#" back to URL for foundations redirect

* NDS-475 Rename ComponentsRedirect to FoundationsRedirect

* NDS-475 Update package.json and package-lock.json

* NDS-475 Fix issues with mdx-js/loader package

* NDS-475 Update tsconfig

* NDS-475 Refactor redirect components to use a reusable Redirect utility

* NDS-475 Add a clean step (`rimraf .next`) to the docs build script

* NDS-475 Remove rimraf command from docs build script

* NDS-475 Update linting and prettier configurations for components

* Downgraded sass version to 1.69.4 get rid of sass warnings in 1.93.2

* NDS-475 Fix import case for Redirect utility in components and foundations pages

* NDS-475 Rename redirect to Redirect.tsx

* NDS-475 Reverted back the changes in package-lock.json

* NDS-475 Update doc version

* NDS-475 Revert the changes in doc version

* NDS-475 Reverted the change in package.json

* NDS-475 Revert the change in package-lock.json

--- a/docs/package.json
+++ b/docs/package.json
@@ -1,37 +1,37 @@
 {
-	"name": "@nice-digital/design-system-docs",
-	"version": "1.6.7",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build && next export",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@code-hike/mdx": "^0.8.3",
-		"@mdx-js/loader": "^2.1.5",
-		"@mdx-js/react": "^2.1.5",
-		"@next/mdx": "^13.0.1",
-		"@nice-digital/design-system": "^5.5.7",
-		"@nice-digital/global-nav": "^5.0.916",
-		"glob": "^8.0.3",
-		"next": "^13.2.4",
-		"next-transpile-modules": "^9.1.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"remark-gfm": "^3.0.1"
-	},
-	"devDependencies": {
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/user-event": "^14.4.3",
-		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
-		"@types/react": "^18.3.24",
-		"@types/react-dom": "^18.3.1",
-		"eslint": "8.26.0",
-		"eslint-config-next": "13.0.0",
-		"sass": "^1.55.0",
-		"typescript": "4.8.4"
-	}
+  "name": "@nice-digital/design-system-docs",
+  "version": "1.6.7",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@code-hike/mdx": "^0.8.3",
+    "@mdx-js/react": "2.1.5",
+    "@next/mdx": "^15.5.4",
+    "@nice-digital/design-system": "^5.5.7",
+    "@nice-digital/global-nav": "^5.0.916",
+    "glob": "^8.0.3",
+    "next": "^15.5.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "remark-gfm": "^3.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.19.0",
+    "@types/react": "^18.3.25",
+    "@types/react-dom": "^18.3.1",
+    "@types/styled-jsx": "^3.4.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.5.4",
+    "sass": "^1.55.0",
+    "typescript": "^5.9.2"
+  }
 }
