Nxt 782 spacing changes to rich text blok on info pages (#377)
* add wrapper element to AccordionGroup component to contain nested elements

* NXT-782 package-lock change on alpha publish.

- uncertain why, possibly new release script.

* NXT-782 test revert alpha release script

* Publish

 - @nice-digital/design-system@5.5.8-alpha.0
 - @nice-digital/nds-accordion@0.3.2-alpha.0
 - @nice-digital/design-system-docs@1.6.8-alpha.0

* NXT-782 publish alpha.

* NXT-782 revert alpha release script

- We're currently finding that lerna is not picking up changes based on commit hash diffs. We believe this is because we're running alpha releases under the same commit hash, nothing changed in the hash value, so it pick up no changes.
- We could look at updating the alpha release script, or
- possibly adding a version script in package.json using `lerna version`
- one to keep an eye on between us all and update if we keep running into that issue.

--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/design-system",
-	"version": "5.5.7",
+	"version": "5.5.8-alpha.0",
 	"description": "Your source for quickly creating consistent on-brand NICE digital services",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -34,7 +34,7 @@
 	"dependencies": {
 		"@nice-digital/icons": "^6.1.6",
 		"@nice-digital/nds-a-z-list": "^4.0.16",
-		"@nice-digital/nds-accordion": "^0.3.1",
+		"@nice-digital/nds-accordion": "^0.3.2-alpha.0",
 		"@nice-digital/nds-action-banner": "^4.3.4",
 		"@nice-digital/nds-alert": "^4.0.15",
 		"@nice-digital/nds-alphabet": "^3.0.15",
@@ -72,7 +72,7 @@
 		"react": "^16 || ^17 || ^18",
 		"react-dom": "^16 || ^17 || ^18"
 	},
-	"gitHead": "dd76d13a75f00a0261df82e055d2525ba6c3189d",
+	"gitHead": "463269d9aad4bad626f6798a5a145f41e73badb7",
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
