--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system-docs",
-  "version": "1.6.8-alpha.0",
+  "version": "1.6.8",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,7 +13,7 @@
     "@code-hike/mdx": "^0.8.3",
     "@mdx-js/react": "2.1.5",
     "@next/mdx": "^15.5.4",
-    "@nice-digital/design-system": "^5.5.8-alpha.0",
+    "@nice-digital/design-system": "^5.5.8",
     "@nice-digital/global-nav": "^5.0.916",
     "glob": "^8.0.3",
     "next": "^15.5.4",
