--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": ">=18.18.0"
+    "node": ">=22.19.0",
+    "npm": ">=10.9.3"
   },
   "devDependencies": {
     "@mdx-js/loader": "^2.3.0",
@@ -71,7 +72,7 @@
     "typescript": "^4.8.4"
   },
   "volta": {
-    "node": "18.18.2"
+    "node": "22.19.0"
   },
   "workspaces": [
     "./components/*",
