--- a/docs/package.json
+++ b/docs/package.json
@@ -25,7 +25,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.2",
-    "@types/node": "^18.19.0",
+    "@types/node": "22.19.0",
     "@types/react": "^18.3.25",
     "@types/react-dom": "^18.3.1",
     "@types/styled-jsx": "^3.4.4",
