NDS-476 update @types/node to 22.19.0
- keeping node type defs in sync with our node version

--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -44,7 +44,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
+		"@types/node": "22.19.0",
 		"typescript": "^5.9.3"
 	},
 	"gitHead": "dd76d13a75f00a0261df82e055d2525ba6c3189d"
