--- a/components/nds-column-list/package.json
+++ b/components/nds-column-list/package.json
@@ -40,7 +40,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
+		"@types/node": "22.19.0",
 		"typescript": "^5.9.3"
 	}
 }
