--- a/components/nds-in-page-nav/package.json
+++ b/components/nds-in-page-nav/package.json
@@ -45,7 +45,7 @@
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
 		"@types/lodash.throttle": "^4.1.7",
-		"@types/node": "^18.11.9",
+		"@types/node": "22.19.0",
 		"typescript": "^5.9.3"
 	},
 	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
