NDS-476 update prettier and rules relating to updated versions:
- prettier and extends rule for prettier in eslint config
- eslint-config-prettier - run prettier as eslint rule (potentially need to run prettier and eslint seperately in future for perf gains in CI)
- update stylelint rules now handled by prettier v3+
- removed eslint-plugin-prettier, no longer required

https://prettier.io/docs/integrating-with-linters
https://eslint.org/blog/2023/10/deprecating-formatting-rules/#main

--- a/package.json
+++ b/package.json
@@ -60,13 +60,12 @@
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^10.1.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lerna": "^6.6.2",
-    "prettier": "2.8.0",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.9.3"
