--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,29 +1,15 @@
 {
-	"extends": [
-		"stylelint-config-standard-scss",
-		"stylelint-prettier/recommended"
-	],
+	"extends": ["stylelint-config-standard-scss"],
 	"plugins": [
 		"stylelint-scss",
 		"stylelint-order",
 		"stylelint-selector-bem-pattern"
 	],
 	"rules": {
-		"string-quotes": "single",
 		"at-rule-no-unknown": null,
 		"scss/operator-no-newline-after": null,
 		"scss/at-rule-no-unknown": true,
-		"block-closing-brace-newline-after": [
-			"always",
-			{
-				"ignoreAtRules": [
-					"if",
-					"else"
-				]
-			}
-		],
 		"selector-pseudo-element-colon-notation": "single",
-		"number-leading-zero": "always",
 		"declaration-empty-line-before": "never",
 		"at-rule-empty-line-before": null,
 		"scss/at-else-closing-brace-newline-after": "always-last-in-chain",
