--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
