--- a/components/nds-column-list/package.json
+++ b/components/nds-column-list/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-column-list",
-	"version": "4.0.16",
+	"version": "4.0.17-alpha-node-update.0",
 	"description": "Column List component for the NICE Design System",
 	"main": "es/ColumnList.js",
 	"types": "es/ColumnList.d.ts",
@@ -32,7 +32,7 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.16"
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0"
 	},
 	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679",
 	"devDependencies": {
