--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-grid",
-	"version": "4.0.19",
+	"version": "4.0.20-alpha-node-update.0",
 	"description": "Grid component for the NICE Design System",
 	"keywords": [
 		"grid"
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.16",
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0",
 		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
