--- a/components/nds-hero/package.json
+++ b/components/nds-hero/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-hero",
-	"version": "4.1.2",
+	"version": "4.1.3-alpha-node-update.0",
 	"description": "Hero component for the NICE Design System",
 	"keywords": [
 		"hero"
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.16",
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
