--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system-docs",
-  "version": "1.6.9",
+  "version": "1.6.10-alpha-node-update.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,7 +13,7 @@
     "@code-hike/mdx": "^0.9.0",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^15.5.4",
-    "@nice-digital/design-system": "^5.5.9",
+    "@nice-digital/design-system": "^5.5.10-alpha-node-update.0",
     "@nice-digital/global-nav": "^5.0.916",
     "glob": "^8.0.3",
     "next": "^15.5.4",
