NDS-476 update volta config to specific versions, without ranges

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   },
   "volta": {
     "node": "22.19.0",
-    "npm": ">=10.9.3"
+    "npm": "10.9.3"
   },
   "workspaces": [
     "./components/*",
