NDS-476 test updating lerna release and version scripts
- adding test .sh script for naming of version against the branch and commit hash (as identifier)
- checking version command shows expected package bumps from (sanity check before publish)
- update README with new commands

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "// LERNA": "",
     "lerna": "lerna",
     "lerna:clean": "lerna clean -y",
-    "release:alpha": "npm run clean:ts && npm run build:ts && lerna publish --dist-tag alpha",
+    "lerna:changed": "lerna changed",
+    "version:alpha-preview": "bash ./scripts/preview-alpha-version.sh",
+    "release:alpha": "npm run clean:ts && npm run build:ts && lerna publish prerelease --dist-tag alpha --no-push --no-git-tag-version",
     "release:latest": "npm run clean:ts && npm run build:ts && lerna publish --dist-tag latest",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint",
