NDS-476 node upgrades with dependency granular updates. (#382)
* NDS-476 initial update of node and npm versions at root

* NDS-476 load Shiki JSON theme via createRequire for ESM compatibility

- Replaces the experimental ESM JSON import syntax with a stable CommonJs style require, using createRequire

Ensures BOrd theme loads correctly in Node.js envs that do not support JSON modules.  Improves cross-version compat.

* NDS-476 remove commented import

* NDS-476 bump @types/node at root

* NDS-476 bump types/node on docs using lerna add.

* NDS-476 update typescript to latest across repo

- Updated TS deps across repo
- tested via dry runs with tsc -b --noEmit --verbose, script run is passing.  Purposely introduced error and it reports  error on script run.

* NDS-476 - update @typescript/eslint dep, resolving unsupported TS warning from @typescript-eslint/typescript-estree.

* NDS-476 update prettierignore for icons dist js and ts

* NDS-476 update @types/node to 22.19.0

- keeping node type defs in sync with our node version

* NDS-476 update prettier and rules relating to updated versions:

- prettier and extends rule for prettier in eslint config
- eslint-config-prettier - run prettier as eslint rule (potentially need to run prettier and eslint seperately in future for perf gains in CI)
- update stylelint rules now handled by prettier v3+
- removed eslint-plugin-prettier, no longer required

https://prettier.io/docs/integrating-with-linters
https://eslint.org/blog/2023/10/deprecating-formatting-rules/#main

* NDS-476 revert  to using import and import attirbutes for theme json

* NDS-476 update codehike dependency to v0.9.0

- updated theme settings in next.config, code-hike/mdx now contains it's own themes
- removed shiki import, deprecated in code-hike/mdx 0.9.0

* NDS-476 update markdown related plugins for docs site

- updated @mdx-js/react @mdx-js/loader and remark-gfm for docs site

* NDS_476 revert alpha release script.

- Canary mode blocks alpha releas

--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/design-system",
-	"version": "5.5.9",
+	"version": "5.5.10-alpha-node-update.0",
 	"description": "Your source for quickly creating consistent on-brand NICE digital services",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -32,40 +32,40 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^6.1.6",
-		"@nice-digital/nds-a-z-list": "^4.0.17",
-		"@nice-digital/nds-accordion": "^0.3.2",
-		"@nice-digital/nds-action-banner": "^4.3.5",
-		"@nice-digital/nds-alert": "^4.0.16",
-		"@nice-digital/nds-alphabet": "^3.0.16",
-		"@nice-digital/nds-breadcrumbs": "^4.0.16",
-		"@nice-digital/nds-button": "^4.0.18",
-		"@nice-digital/nds-card": "^4.0.20",
-		"@nice-digital/nds-checkbox": "^4.0.16",
-		"@nice-digital/nds-column-list": "^4.0.16",
-		"@nice-digital/nds-container": "^4.0.16",
-		"@nice-digital/nds-core": "^4.0.16",
-		"@nice-digital/nds-enhanced-pagination": "^4.0.16",
-		"@nice-digital/nds-filters": "^5.0.21",
-		"@nice-digital/nds-form-group": "^4.0.16",
-		"@nice-digital/nds-full-bleed": "^4.0.16",
-		"@nice-digital/nds-grid": "^4.0.19",
-		"@nice-digital/nds-hero": "^4.1.2",
-		"@nice-digital/nds-horizontal-nav": "^4.0.16",
-		"@nice-digital/nds-in-page-nav": "^4.0.17",
-		"@nice-digital/nds-input": "^4.0.16",
-		"@nice-digital/nds-maintain-ratio": "^4.0.16",
-		"@nice-digital/nds-page-header": "^4.0.19",
-		"@nice-digital/nds-panel": "^4.0.16",
-		"@nice-digital/nds-phase-banner": "^4.0.16",
-		"@nice-digital/nds-prev-next": "^4.0.16",
-		"@nice-digital/nds-radio": "^4.0.16",
-		"@nice-digital/nds-simple-pagination": "^4.0.16",
-		"@nice-digital/nds-stacked-nav": "^4.0.17",
-		"@nice-digital/nds-table": "^4.0.16",
-		"@nice-digital/nds-tabs": "^4.0.16",
-		"@nice-digital/nds-tag": "^4.0.16",
-		"@nice-digital/nds-textarea": "^4.0.16",
+		"@nice-digital/icons": "^6.1.7-alpha-node-update.0",
+		"@nice-digital/nds-a-z-list": "^4.0.18-alpha-node-update.0",
+		"@nice-digital/nds-accordion": "^0.3.3-alpha-node-update.0",
+		"@nice-digital/nds-action-banner": "^4.3.6-alpha-node-update.0",
+		"@nice-digital/nds-alert": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-alphabet": "^3.0.17-alpha-node-update.0",
+		"@nice-digital/nds-breadcrumbs": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-button": "^4.0.19-alpha-node-update.0",
+		"@nice-digital/nds-card": "^4.0.21-alpha-node-update.0",
+		"@nice-digital/nds-checkbox": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-column-list": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-container": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-enhanced-pagination": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-filters": "^5.0.22-alpha-node-update.0",
+		"@nice-digital/nds-form-group": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-full-bleed": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-grid": "^4.0.20-alpha-node-update.0",
+		"@nice-digital/nds-hero": "^4.1.3-alpha-node-update.0",
+		"@nice-digital/nds-horizontal-nav": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-in-page-nav": "^4.0.18-alpha-node-update.0",
+		"@nice-digital/nds-input": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-maintain-ratio": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-page-header": "^4.0.20-alpha-node-update.0",
+		"@nice-digital/nds-panel": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-phase-banner": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-prev-next": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-radio": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-simple-pagination": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-stacked-nav": "^4.0.18-alpha-node-update.0",
+		"@nice-digital/nds-table": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-tabs": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-tag": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-textarea": "^4.0.17-alpha-node-update.0",
 		"normalize.css": "8.0.1"
 	},
 	"peerDependencies": {
@@ -78,7 +78,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
-		"typescript": "^4.8.4"
+		"@types/node": "22.19.0",
+		"typescript": "^5.9.3"
 	}
 }
