--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-a-z-list",
-	"version": "4.0.17",
+	"version": "4.0.18-alpha-node-update.0",
 	"description": "A to Z list component for the NICE Design System",
 	"main": "es/AZList.js",
 	"types": "es/AZList.d.ts",
@@ -32,15 +32,15 @@
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.16"
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
-		"typescript": "^4.8.4"
+		"@types/node": "22.19.0",
+		"typescript": "^5.9.3"
 	},
 	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
 }
