--- a/components/nds-accordion/package.json
+++ b/components/nds-accordion/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-accordion",
-	"version": "0.3.2",
+	"version": "0.3.3-alpha-node-update.0",
 	"description": "Accordion component for the NICE Design System",
 	"author": "John Davey <john.davey@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -44,9 +44,9 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
+		"@types/node": "22.19.0",
 		"jest-extended": "^4.0.2",
-		"typescript": "^4.8.4"
+		"typescript": "^5.9.3"
 	},
 	"gitHead": "463269d9aad4bad626f6798a5a145f41e73badb7"
 }
