--- a/components/nds-core/package.json
+++ b/components/nds-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-core",
-	"version": "4.0.16",
+	"version": "4.0.17-alpha-node-update.0",
 	"description": "Core code for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"contributors": [
@@ -32,7 +32,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^6.1.6",
+		"@nice-digital/icons": "^6.1.7-alpha-node-update.0",
 		"sass-mq": "^6.0.0"
 	},
 	"peerDependencies": {
@@ -44,8 +44,8 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
-		"typescript": "^4.8.4"
+		"@types/node": "22.19.0",
+		"typescript": "^5.9.3"
 	},
 	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
 }
