--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-filters",
-	"version": "5.0.21",
+	"version": "5.0.22-alpha-node-update.0",
 	"description": "Filter components for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -28,11 +28,11 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^6.1.6",
-		"@nice-digital/nds-button": "^4.0.18",
-		"@nice-digital/nds-core": "^4.0.16",
-		"@nice-digital/nds-input": "^4.0.16",
-		"@nice-digital/nds-tag": "^4.0.16",
+		"@nice-digital/icons": "^6.1.7-alpha-node-update.0",
+		"@nice-digital/nds-button": "^4.0.19-alpha-node-update.0",
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-input": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-tag": "^4.0.17-alpha-node-update.0",
 		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
@@ -44,8 +44,8 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
-		"typescript": "^4.8.4"
+		"@types/node": "22.19.0",
+		"typescript": "^5.9.3"
 	},
 	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
 }
