--- a/components/nds-panel/package.json
+++ b/components/nds-panel/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-panel",
-	"version": "4.0.16",
+	"version": "4.0.17-alpha-node-update.0",
 	"description": "Panel component for the NICE Design System",
 	"keywords": [
 		"panel"
@@ -38,7 +38,7 @@
 		"react-dom": "^16 || ^17 || ^18"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.16",
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0",
 		"classnames": "^2.2.6"
 	},
 	"devDependencies": {
@@ -46,8 +46,8 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
-		"typescript": "^4.8.4"
+		"@types/node": "22.19.0",
+		"typescript": "^5.9.3"
 	},
 	"gitHead": "e75957040c9acfbd7eeb164cad724e3b48760679"
 }
