--- a/components/nds-phase-banner/package.json
+++ b/components/nds-phase-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-phase-banner",
-	"version": "4.0.16",
+	"version": "4.0.17-alpha-node-update.0",
 	"description": "Phase banner component for the NICE Design System",
 	"keywords": [
 		"alpha",
@@ -35,8 +35,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^4.0.16",
-		"@nice-digital/nds-tag": "^4.0.16",
+		"@nice-digital/nds-core": "^4.0.17-alpha-node-update.0",
+		"@nice-digital/nds-tag": "^4.0.17-alpha-node-update.0",
 		"classnames": "^2.3.1"
 	},
 	"devDependencies": {
@@ -44,8 +44,8 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
-		"@types/node": "^18.11.9",
-		"typescript": "^4.8.4"
+		"@types/node": "22.19.0",
+		"typescript": "^5.9.3"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
