--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system-docs",
-  "version": "1.6.9",
+  "version": "1.6.10-alpha-node-update.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,22 +10,22 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@code-hike/mdx": "^0.8.3",
-    "@mdx-js/react": "2.1.5",
-    "@next/mdx": "^15.5.9",
-    "@nice-digital/design-system": "^5.5.9",
+    "@code-hike/mdx": "^0.9.0",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.4",
+    "@nice-digital/design-system": "^5.5.10-alpha-node-update.0",
     "@nice-digital/global-nav": "^7.1.1114",
     "glob": "^8.0.3",
-    "next": "^15.5.9",
+    "next": "^15.5.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.2",
-    "@types/node": "^18.19.0",
+    "@types/node": "22.19.0",
     "@types/react": "^18.3.25",
     "@types/react-dom": "^18.3.1",
     "@types/styled-jsx": "^3.4.4",
@@ -33,5 +33,9 @@
     "eslint-config-next": "^15.5.4",
     "sass": "^1.55.0",
     "typescript": "^5.9.2"
+  },
+  "volta": {
+    "node": "22.19.0",
+    "npm": "10.9.3"
   }
 }
