--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
 	"$schema": "node_modules/lerna/schemas/lerna-schema.json",
-	"useWorkspaces": true,
-	"version": "independent"
+	"version": "independent",
+	"packages": ["components/*", "docs"]
 }
