--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "// LERNA": "",
     "lerna": "lerna",
     "lerna:clean": "lerna clean -y",
-    "release:alpha": "git fetch --tags && npm run clean:ts && npm run build:ts && lerna publish --canary --preid alpha --dist-tag alpha --git-tag-version",
+    "release:alpha": "npm run clean:ts && npm run build:ts && lerna publish --dist-tag alpha",
     "release:latest": "npm run clean:ts && npm run build:ts && lerna publish --dist-tag latest",
     "// TESTS": "",
     "test": "cross-env CI=true npm run test:unit && npm run lint",
@@ -48,33 +48,38 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": ">=18.18.0"
+    "node": ">=22.19.0",
+    "npm": ">=10.9.3"
+  },
+  "volta": {
+    "node": "22.19.0",
+    "npm": "10.9.3"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/loader": "^3.1.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.45.1",
-    "@typescript-eslint/parser": "^5.45.1",
+    "@types/node": "^22.19.0",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "lerna": "^6.6.2",
-    "prettier": "2.8.0",
+    "lerna": "^7.4.2",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
-  },
-  "volta": {
-    "node": "18.18.2"
+    "typescript": "^5.9.3"
   },
   "workspaces": [
     "./components/*",
     "./docs"
-  ]
+  ],
+  "overrides": {
+    "tar":"^7.5.7"
+  }
 }
